extended build script with switch for jdk9+ to suppress cglib warn #343